# trading

./: .gitignore  Dockerfile  check_db.py  docker-entrypoint.sh  mt5_bridge.py  pyproject.toml
hermes_trading/: hermes_cmd.py  loop.py  loop_breakout.py  reflect.py  reset_trades.py  run.py  run_all.py  run_breakout.py  score.py  stats_cli.py  status_server.py
hermes_trading/adapters/: macro.py  mt5_price.py  news.py  onchain.py  price.py
hermes_trading/strategy/: __init__.py  backtest.py  entry.py  exits.py  fibonacci.py  live.py  regime.py  signal.py  structure.py  swing.py
hermes_trading/strategy_breakout/: __init__.py  signal.py
mql5/: Hermes_Structure.mq5
scripts/: chart_structure_btc.py  compare_default_vs_optimised.py  download_mt5_data.py  run_backtest.py  test_entry_btc.py  test_exits_btc.py  test_fibonacci_btc.py  test_signal_btc.py  test_structure_btc.py  test_swing_btc.py  verify_live.py
state/: breakout_strategy.yaml  goal.yaml  hypotheses.jsonl  strategy.yaml
state/history/: v0001.yaml  v0002.yaml  v0003.yaml  v0004.yaml  v0005.yaml
