[project]
name = "hermes-trading"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.0.0",
    "yfinance>=0.2.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "anthropic>=0.25.0",
    "matplotlib>=3.10.9",
    "pyarrow>=14.0.0",
    "metatrader5>=5.0.5735",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"
hermes = "hermes_trading.hermes_cmd:main"
hermes-stats = "hermes_trading.stats_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
